--- a/.github/workflows/ci-load-test.yml
+++ b/.github/workflows/ci-load-test.yml
@@ -16,3 +16,7 @@ jobs:
               with:
                 files: manifests/
                 policy: opa/manifests.rego
+            - name: Install tools
+              run: sh .github/scripts/install-tools.sh
+              env:
+                KUBECTL_VERSION: v1.28.2
