Add provision-cluster script

--- a/.github/workflows/ci-load-test.yml
+++ b/.github/workflows/ci-load-test.yml
@@ -20,3 +20,5 @@ jobs:
               run: sh .github/scripts/install-tools.sh
               env:
                 KUBECTL_VERSION: v1.28.2
+            - name: Provision kind cluster
+              run: sh .github/scripts/provision-cluster.sh
