--- a/.github/workflows/ci-load-test.yml
+++ b/.github/workflows/ci-load-test.yml
@@ -22,3 +22,6 @@ jobs:
                 KUBECTL_VERSION: v1.28.2
             - name: Provision kind cluster
               run: sh .github/scripts/provision-cluster.sh
+            - name: Deploy app to kind cluster
+              working-directory: ./manifests/
+              run: kubectl apply -f .
