--- a/.github/workflows/ci-load-test.yml
+++ b/.github/workflows/ci-load-test.yml
@@ -25,3 +25,5 @@ jobs:
             - name: Deploy app to kind cluster
               working-directory: ./manifests/
               run: kubectl apply -f .
+            - name: Check app health
+              run: sh .github/scripts/check-app-health.sh
