--- a/.github/workflows/ci-load-test.yml
+++ b/.github/workflows/ci-load-test.yml
@@ -35,6 +35,7 @@ jobs:
               id: run_load_test
               run: sh .github/scripts/run-load-test.sh
             - name: Capture prometheus metrics for the last 5 minutes
+              working-directory: terraform/
               run: sh .github/scripts/capture-prometheus-metrics
             - name: Comment on PR
               uses: thollander/actions-comment-pull-request@v2.4.3
