--- a/.github/workflows/ci-load-test.yml
+++ b/.github/workflows/ci-load-test.yml
@@ -36,7 +36,7 @@ jobs:
               run: sh .github/scripts/run-load-test.sh
             - name: Capture prometheus metrics for the last 5 minutes
               # working-directory: terraform/
-              run: sh .github/scripts/capture-prometheus-metrics
+              run: sh .github/scripts/capture-prometheus-metrics.sh
             - name: Comment on PR
               uses: thollander/actions-comment-pull-request@v2.4.3
               with:
